; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/wayland/extr_registry.c_vlc_wl_registry_destroy.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/wayland/extr_registry.c_vlc_wl_registry_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_wl_registry = type { i32, i32, i32 }

@name_destroy = common dso_local global i32 0, align 4
@interface_destroy = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlc_wl_registry_destroy(%struct.vlc_wl_registry* %0) #0 {
  %2 = alloca %struct.vlc_wl_registry*, align 8
  store %struct.vlc_wl_registry* %0, %struct.vlc_wl_registry** %2, align 8
  %3 = load %struct.vlc_wl_registry*, %struct.vlc_wl_registry** %2, align 8
  %4 = getelementptr inbounds %struct.vlc_wl_registry, %struct.vlc_wl_registry* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @wl_registry_destroy(i32 %5)
  %7 = load %struct.vlc_wl_registry*, %struct.vlc_wl_registry** %2, align 8
  %8 = getelementptr inbounds %struct.vlc_wl_registry, %struct.vlc_wl_registry* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @name_destroy, align 4
  %11 = call i32 @tdestroy(i32 %9, i32 %10)
  %12 = load %struct.vlc_wl_registry*, %struct.vlc_wl_registry** %2, align 8
  %13 = getelementptr inbounds %struct.vlc_wl_registry, %struct.vlc_wl_registry* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @interface_destroy, align 4
  %16 = call i32 @tdestroy(i32 %14, i32 %15)
  %17 = load %struct.vlc_wl_registry*, %struct.vlc_wl_registry** %2, align 8
  %18 = call i32 @free(%struct.vlc_wl_registry* %17)
  ret void
}

declare dso_local i32 @wl_registry_destroy(i32) #1

declare dso_local i32 @tdestroy(i32, i32) #1

declare dso_local i32 @free(%struct.vlc_wl_registry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
